src/test/deca/context/invalid/declField-invalidInitialization.context
declField-invalidInitialization.deca:2: